# frontier-fabric-agentops-rvas

./: .gitignore  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE  README.html  README.md  builder-data.json  builder.html  code-index.json  code.html  index.html  package-lock.json  package.json  site-data.json
challenges/: README.html  README.md  challenge-00-mission-setup.html  challenge-00-mission-setup.md  challenge-01-agent-telemetry.html  challenge-01-agent-telemetry.md  challenge-02-landing-zone.html  challenge-02-landing-zone.md  challenge-03-onelake-foundation.html  challenge-03-onelake-foundation.md  challenge-04-medallion-pipeline.html  challenge-04-medallion-pipeline.md  challenge-05-control-tower-dashboards.html  challenge-05-control-tower-dashboards.md  challenge-06-operationalize.html  challenge-06-operationalize.md
coach/: README.html  README.md  challenge-00-guide.html  challenge-00-guide.md  challenge-01-guide.html  challenge-01-guide.md  challenge-02-guide.html  challenge-02-guide.md  challenge-03-guide.html  challenge-03-guide.md  challenge-04-guide.html  challenge-04-guide.md  challenge-05-guide.html  challenge-05-guide.md  challenge-06-guide.html  challenge-06-guide.md
docs/: architecture.html  architecture.md  faq.html  faq.md  prerequisites.html  prerequisites.md
resources/observability-sdk/: README.html  README.md  pyproject.toml
resources/observability-sdk/examples/: billing_agent_example.py
resources/observability-sdk/observability_sdk/: __init__.py  alerts.py  azure_monitor.py  decorators.py  events.py  metrics.py  tracker.py
(+59 files in other folders)
